--- a/src/styles/kousa/MessageContainer.css
+++ b/src/styles/kousa/MessageContainer.css
@@ -98,3 +98,9 @@ div {
   color: #b2bdcd;
   border-radius: 999px;
 }
+
+@media only screen and (max-width: 750px) {
+  .messages {
+    padding-left: 0px;
+  }
+}
