--- a/src/styles/kallen/Finds.css
+++ b/src/styles/kallen/Finds.css
@@ -32,7 +32,7 @@
   grid-template-columns: repeat(3, 330px);
   margin-left: 30px;
   margin-right: 30px;
-  grid-gap: 20px;
+  grid-gap: 10px;
   margin-top: 50px;
   min-height: 400px;
 }
@@ -44,10 +44,11 @@
   border-radius: 11px;
   box-shadow: var(--deep-paper-shadow);
   height: 290px;
-  width: 270px;
+  width: 250px;
   display: grid;
   grid-template-rows: 70px 1fr 60px;
   color: #d3d3d3;
+  overflow: hidden;
 }
 
 .discovery-card-header {
@@ -132,6 +133,18 @@
   }
 }
 
+@media only screen and (max-width: 414px) {
+  .discovery-card {
+    width: 350px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .discovery-card {
+    width: 310px;
+  }
+}
+
 @media (max-width: 360px) {
   .header-finds {
     display: grid;
@@ -144,13 +157,19 @@
   }
 
   .content-finds {
-    margin-top: 20px;
-    grid-template-columns: repeat(1, 250px);
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .discovery-card {
-    width: 230px;
-    height: 310px;
-    min-width: 200px;
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .content-finds {
+    margin-right: 0;
+  }
+  .discovery-card {
+    width: 260px;
   }
 }
