--- a/src/styles/kallen/Modals.css
+++ b/src/styles/kallen/Modals.css
@@ -1,7 +1,13 @@
 /* Publish Modal */
 
+.ModalContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .publishModal {
-  height: 315px;
+  height: 365px;
   padding: 10px 20px;
   border-radius: 12px;
   width: 500px;
@@ -176,4 +182,87 @@
   font-size: 16px;
   border-radius: 11px;
   box-shadow: var(--secondary-paper-shadow);
+}
+
+/* Media Queries */
+@media only screen and (max-width: 750px) {
+  .publishModal__header > .close-icon > .icon {
+    background-color: var(--primary-border-color);
+  }
+
+  .discussion__header > .close-icon > .icon {
+    background-color: var(--primary-border-color);
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .discussionModal {
+    height: 410px;
+  }
+  .publishModal {
+    width: 350px;
+  }
+
+  .discussionModal {
+    width: 350px;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .publishModal {
+    width: 350px;
+  }
+  .discussionModal {
+    width: 350px;
+  }
+}
+
+@media only screen and (max-width: 385px) {
+  .publishModal {
+    width: 310px;
+  }
+
+  .discussionModal {
+    width: 310px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .publishModal {
+    width: 300px;
+  }
+
+  .discussionModal {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .publishModal {
+    width: 280px;
+  }
+
+  .discussionModal {
+    width: 280px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .publishModal {
+    width: 270px;
+  }
+
+  .discussionModal {
+    width: 270px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .publishModal {
+    width: 200px;
+  }
+
+  .discussionModal {
+    width: 200px;
+  }
 }
