--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
     0px 3px 4px -2px rgb(0 0 0 / 14%), 0px 1px 8px -2px rgb(0 0 0 / 18%);
 }
 
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: -webkit-fill-available;
+}
+
 .MuiTab-wrapper {
   color: #d3d3d3;
   font-size: 16px;
