--- a/src/styles/kousa/AddChannelModal.css
+++ b/src/styles/kousa/AddChannelModal.css
@@ -2,24 +2,23 @@
   height: 280px;
   padding: 10px 20px;
   border-radius: 12px;
-  width: 500px;
+  width: 510px;
   outline: none;
   margin: 0 auto;
   margin-bottom: 15px;
   margin-top: 100px;
   background-color: #161b22;
-  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+  box-shadow: var(--deep-paper-shadow);
+  border: 1px solid var(--primary-border-color);
 }
 
 .card__addChannel {
-  display: grid;
-  grid-template-rows: 60px 80px 40px 1fr;
+  display: flex;
+  flex-direction: column;
 }
 
 .cardHeader__addChannel {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 
 .cardHeader__addChannel > h1 {
@@ -28,12 +27,11 @@
 
 .input__addChannel {
   display: flex;
-  height: 30px;
-  width: var(--input-size);
-  padding: 10px 20px;
-  border-radius: 11px;
+  height: 20px;
+  width: 490px;
+  padding: 10px;
+  border-radius: 5px;
   border: 1px solid var(--border-color);
-  margin: 0 auto;
   margin-bottom: 15px;
   margin-top: 20px;
   background-color: transparent;
@@ -42,7 +40,6 @@
 .input__addChannel > input {
   flex: 1;
   padding: 10px 20px;
-  margin-top: 3px;
   border: none;
   color: #323d4d;
   font-size: 20px;
@@ -81,14 +78,17 @@
   color: lightgray;
   cursor: pointer;
   padding: 10px 15px;
-  border-radius: 11px;
+  border-radius: 5px;
   border: 1px solid var(--border-color);
-  margin: 0 auto;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
   background-color: transparent;
   justify-content: center;
-  font-size: 15px;
+  align-items: center;
+  font-size: 18px;
+}
+
+.btn__addChannel:hover {
+  transform: scale(1.04);
 }
 
 .checkbox-AddChannel {
@@ -109,7 +109,7 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
-input[type='checkbox'] {
+input[type="checkbox"] {
   margin-top: 8px;
   position: relative;
   width: 60px;
@@ -122,12 +122,12 @@ input[type='checkbox'] {
   transition: 500ms;
 }
 
-input:checked[type='checkbox'] {
+input:checked[type="checkbox"] {
   background-color: #03a9f4;
 }
 
-input[type='checkbox']::before {
-  content: '';
+input[type="checkbox"]::before {
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
@@ -138,6 +138,36 @@ input[type='checkbox']::before {
   transition: 500ms;
 }
 
-input:checked[type='checkbox']::before {
+input:checked[type="checkbox"]::before {
   left: 35px;
+}
+
+.cardHeader__addChannel {
+  text-align: center;
+}
+
+.cardHeader__addChannel > .headerTitle_Invite {
+  text-align: center;
+  color: #d3d3d3;
+}
+
+.cardHeader__addChannel > .close-icon {
+  display: flex;
+  flex: 1 1;
+  justify-content: flex-end;
+}
+
+.cardHeader__addChannel > .close-icon > div {
+  background-color: var(--primary-border-color);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.cardHeader__addChannel > .close-icon > div:hover {
+  transform: scale(1.06);
 }
