--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,7 @@ select:-webkit-autofill:focus {
 
 @media (max-width: 750px) {
   .viewteam_layout {
+    height: 84vh;
     grid-template-columns: 0px 0px 1fr;
   }
   .team__wrapper {
