--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -10,6 +10,7 @@
 .login-layout {
   display: grid;
   grid-template-columns: 600px 1fr;
+  position: fixed;
 }
 
 .banner {
@@ -62,6 +63,7 @@
     var(--bg-color) 2.65%,
     rgba(66, 66, 66, 0) 99.37%
   );
+  margin-left: 100px;
 }
 
 .card-login > .card-content > h2 {
@@ -160,6 +162,47 @@
   color: #f50057;
 }
 
+.ErrorCard__Toast {
+  background-color: #f50057;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border-left: 10px solid white;
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  width: 300px;
+}
+
+.ErrorCard__Toast > h3 {
+  font-family: "Inter";
+  color: #323d4d;
+}
+
+.show {
+  animation: show_slide 1s ease forwards;
+}
+
+@keyframes show_slide {
+  0% {
+    transform: translateX(100%);
+  }
+
+  40% {
+    transform: translateX(-10%);
+  }
+
+  80% {
+    transform: translateX(0%);
+  }
+
+  100% {
+    transform: translateX(-10px);
+  }
+}
+
+.hide {
+  display: none;
+}
 /* Media Queries */
 @media (max-width: 900px) {
   .banner {
@@ -168,6 +211,12 @@
   .login-layout {
     display: grid;
     grid-template-columns: 1fr;
+  }
+}
+
+@media only screen and (max-width: 725px) {
+  .card-login {
+    margin-left: 0px;
   }
 }
 
