--- a/src/styles/kousa/Channels.css
+++ b/src/styles/kousa/Channels.css
@@ -135,6 +135,10 @@ h6 {
   cursor: pointer;
 }
 
+.sidebar_list_header > span {
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 750px) {
   .channel__wrapper {
     display: none;
