--- a/src/styles/kousa/Teams.css
+++ b/src/styles/kousa/Teams.css
@@ -26,10 +26,9 @@
   justify-content: center;
   font-size: 24px;
   border-radius: 11px;
+  cursor: pointer;
 }
 
 .team__list__item:hover {
-  border-style: solid;
-  border-width: 2px;
-  border-color: #767676;
+  transform: scale(1.1);
 }
