--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -51,9 +51,14 @@
   transition: transform 100ms ease-in-out;
 }
 
+.sidebarLink__MainPage > div > a {
+  color: #d3d3d3;
+  text-decoration: none;
+}
+
 .sidebarLink__MainPage:hover {
   background-color: var(--secondary-bg-color);
-  transform: scale(1.1);
+  transform: scale(1.08);
 }
 
 .sidebarLink__MainPage > * {
