--- a/src/styles/issuePage/Modals.css
+++ b/src/styles/issuePage/Modals.css
@@ -7,7 +7,7 @@
 }
 
 .publishModal {
-  height: 365px;
+  height: 315px;
   padding: 10px 20px;
   border-radius: 12px;
   width: 500px;
@@ -16,6 +16,7 @@
   margin-bottom: 15px;
   margin-top: 100px;
   background-color: #161b22;
+  border: 1px solid var(--primary-border-color);
 }
 
 .publishModal_content > h1 {
@@ -30,15 +31,19 @@
   margin-bottom: 30px;
 }
 
-.publishModal__header > .close-icon > .MuiSvgIcon-root {
-  margin-left: 4px;
+.publishModal__header > .close-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  background-color: var(--primary-border-color);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .publishModal__header > .close-icon:hover {
-  background-color: var(--primary-border-color);
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
+  transform: scale(1.1);
 }
 
 .publishModal__header > h1 {
@@ -77,15 +82,20 @@
 }
 
 .publishModal__btn > button {
-  background-color: #323d4d;
-  border: none;
+  background-color: transparent;
+  border: 1px solid var(--primary-border-color);
   outline: none;
   padding: 10px;
   width: 90px;
   color: #d3d3d3;
   font-size: 16px;
-  border-radius: 11px;
-  box-shadow: var(--secondary-paper-shadow);
+  border-radius: 6px;
+  cursor: pointer;
+  transition: transform 600ms ease-in-out;
+}
+
+.publishModal__btn > button:hover {
+  transform: scale(1.1);
 }
 
 /* New Discussion Modal */
@@ -100,6 +110,7 @@
   margin-bottom: 15px;
   margin-top: 100px;
   background-color: #161b22;
+  border: 1px solid var(--primary-border-color);
 }
 
 .discussionModal_content > h1 {
@@ -114,15 +125,18 @@
   margin-bottom: 30px;
 }
 
-.discussionModal__header > .close-icon > .MuiSvgIcon-root {
-  margin-left: 4px;
-}
-
-.discussionModal__header > .close-icon:hover {
+.discussionModal__header > .close-icon {
   background-color: var(--primary-border-color);
   width: 35px;
   height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
+}
+
+.discussionModal__header > .close-icon:hover {
+  transform: scale(1.1);
 }
 
 .discussionModal__header > h1 {
@@ -173,15 +187,19 @@
 }
 
 .discussionModal__btn > button {
-  background-color: #323d4d;
-  border: none;
+  background-color: transparent;
+  border: 1px solid var(--primary-border-color);
   outline: none;
   padding: 10px;
   width: 90px;
   color: #d3d3d3;
   font-size: 16px;
-  border-radius: 11px;
-  box-shadow: var(--secondary-paper-shadow);
+  border-radius: 5px;
+  transition: transform 600ms ease-in-out;
+}
+
+.discussionModal__btn > button:hover {
+  transform: scale(1.1);
 }
 
 /* Media Queries */
